# api-robotframework

./: .gitignore  azure-pipelines.yml  pyproject.toml  requirements.txt
resources/: api.resource
tests/api/: 01_get_allposts.robot  02_get_singlepost.robot  03_post_singlepost.robot  04_put_updatesinglepost.robot  05_delete_singlepost.robot  06_get_megatrends_resources.robot  post_singlepost.robot
